--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <html>
 <head>
+ <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"> 
   <title>Loading the map...</title>
 
   <!-- jQuery-->
