Comit inicial se añadio una imagen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <body>
 
-  <div class="loader">Loading...</div>
+  <div class="loader">Cargando ...</div>
   <div id="map"></div>
   <table id="maptable" class="display"></table>
 
