--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <html>
 <head>
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> 
-  <title>Loading the map...</title>
+ <link rel="shortcut icon" type="image/x-icon" href="imagenes/favicon.ico">
+  <title>Cargando el mapa...</title>
 
   <!-- jQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
